fixed header menu on mobile and footer clash

--- a/css/style.css
+++ b/css/style.css
@@ -150,7 +150,7 @@ li a {
 .about,
 #portfolio,
 #contact {
-	margin: 20% 0 40% 0;
+	margin: 20% 0 20% 0;
 	z-index: 3;
 }
 
@@ -158,7 +158,7 @@ footer {
 	background-color: white;
 	border: 2px solid black;
 	padding: 20% 0 20% 0;
-	z-index: 3;
+	z-index: 1;
 	position: relative;
 }
 
@@ -263,7 +263,7 @@ img.me {
 		z-index: 10;
 		left: 0;
 		right: 0;
-		top: 0;
+		top: 2.2rem;
 		bottom: 100%;
 		text-align: center;
 		overflow: hidden;
@@ -272,8 +272,8 @@ img.me {
 	}
 
 	#nav-toggle:checked ~ .header-menu {
-		background-color: rgba(255, 237, 237, 0.8);
-		padding-top: 6em;
+		background-color: rgb(255, 255, 254);
+		padding-top: 1em;
 		font-size: 3em;
 		bottom: 0;
 		opacity: 1;
